# mcom02-swic-tools

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  spacewire-video-receive.service  spacewire-video-transmit.service  swic-loopback-test.py  swic-lvds-test.c  swic-max-speed.sh  swic-throughput.py  swic-xfer.c  swic.c  tox.ini  zuul.yaml
graph/: .gitignore  Makefile  README.rst  requirements.txt  swic-graphs.py
